--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,8 @@ services:
         ports: 
             - "4001:4001"
             - "5001:5001"
+        volumes:
+            - ./ipfs_data:/data/ipfs
     redis:
         image: redis
     bgworker:
