got the docker container to work without ipfs errors

--- a/build_files/nginx/Dockerfile
+++ b/build_files/nginx/Dockerfile
@@ -3,5 +3,5 @@ RUN apt-get update
 RUN apt-get install -y nginx
 RUN apt-get install -y libnginx-mod-rtmp
 COPY ./build_files/nginx/default /etc/nginx/sites-available
-COPY ./LOCAL_STATIC /var/www/html/static
+VOLUME /var/www/html/static
 EXPOSE 80
